# cargo-finder

./: .env.example  .gitignore  Dockerfile-fastapi  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  config.py  database.py  db_start.py  main.py  tables.py
src/base/: services.py  utils.py
src/car/: api.py  models.py  services.py  tasks.py
src/cargo/: api.py  models.py  services.py
src/location/: db_logic.py  logic.py  models.py  services.py
